--- a/spring-boot/src/main/resources/application-dev.properties
+++ b/spring-boot/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 
-server.port=8081
+server.port=8082
 server.servlet.context-path=/springDemo
 server.session.timeout=10000
 
@@ -10,9 +10,9 @@ server.tomcat.uri-encoding=UTF-8
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://192.168.31.143:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 #ehcache
 spring.cache.ehcache.config=ehcache.xml
