--- a/spring-boot/src/main/resources/application-prod.properties
+++ b/spring-boot/src/main/resources/application-prod.properties
@@ -12,9 +12,10 @@ server.tomcat.uri-encoding=UTF-8
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://192.168.31.143:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=root
+spring.datasource.password=123456
 
 #ehcache
 spring.cache.ehcache.config=ehcache.xml
