--- a/spring-boot/src/main/resources/application-dev.properties
+++ b/spring-boot/src/main/resources/application-dev.properties
@@ -62,15 +62,29 @@ spring.jackson.default-property-inclusion=non_null
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
+#rabbitMQ
+spring.rabbitmq.addresses=192.168.31.143:5672
+# 配置集群
+#spring.rabbitmq.addresses=192.168.174.140:5672,192.168.174.141:5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
+spring.rabbitmq.connection-timeout=15000
+# confirm模式
+spring.rabbitmq.publisher-confirms=true
+# return机制
+spring.rabbitmq.publisher-returns=true
+# 与return机制结合配置次属性
+spring.rabbitmq.template.mandatory=true
+
 ################ Redis 基础配置 ##############
 # Redis数据库索引（默认为0）
-spring.redis.database=0  
+spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=192.168.31.139
+spring.redis.host=192.168.31.143
 # Redis服务器连接端口
-spring.redis.port=6379  
+spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=123456
+#spring.redis.password=123456
 # 链接超时时间 单位 ms（毫秒）
 spring.redis.timeout=3000
 ################ Redis 线程池设置 ##############
