--- a/spring-boot/src/main/resources/application-dev.properties
+++ b/spring-boot/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ server.tomcat.uri-encoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.31.143:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root123
 
 #ehcache
 spring.cache.ehcache.config=ehcache.xml
