--- a/spring-boot/src/main/resources/application-dev.properties
+++ b/spring-boot/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 
 server.port=8082
-server.servlet.context-path=/springDemo
+server.servlet.context-path=/springboot
 server.session.timeout=10000
 
 spring.http.encoding.force=true
@@ -98,4 +98,11 @@ spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 
 
-name=my-dev
+###################rabbitMq##################
+spring.rabbitmq.host=192.168.31.143
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.listener.concurrency=10
+spring.rabbitmq.listener.max-concurrency=20
+spring.rabbitmq.listener.prefetch=5
